[build-system]

requires = [
    "setuptools>=42",
    "wheel"
]

build-backend = "setuptools.build_meta"


[project]

name = "pya2l"

version = "0.0.2"

dependencies = [
    "argparse"
]

license = {text = "BSD"}

authors = [
  { name="Guillaume Sottas", email="guillaumesottas@gmail.com" },
]

description = "utility for a2l files"

requires-python = ">=3.6"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix"
]


[project.scripts]

pya2l = "pya2l:main"


[tool.setuptools]

packages=['protobuf',
          'pya2l',
          'pya2l.a2l_grpc'
]

include-package-data = true