[metadata]
name = pya2l
version = 0.0.3
author = Guillaume Sottas
author_email = guillaumesottas@gmail.com
description = utility for a2l files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sauci/pya2l
license = BSD License
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: Microsoft :: Windows
	Operating System :: Unix

[options]
python_requires = >= 3.7
packages =
	pya2l
	pya2l.protobuf
include_package_data = True

[options.entry_points]
console_scripts =
	pya2l = pya2l.cli:main
